--- a/estilo.css
+++ b/estilo.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 body {
-    background-image: linear-gradient(to right, #68E8C1, #68BBE8, #68E4E8, #68E896, #6893E8, #B6E6E8);
+    background-image: linear-gradient(to right, #68E8C1, #68BBE8, #68E4E8, #68E896);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
